# django-simple-feedback-form

./: .gitignore  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py
docs/: advanced.rst  conf.py  form.rst  index.rst  setup.rst  usage.rst  view.rst
feedback_form/: forms.py  settings.py  urls.py  views.py
feedback_form/static/css/: feedback.css
feedback_form/templates/feedback_form/: email_from.txt  email_subject.txt  email_template.txt  feedback.html
src/feedback_form/: apps.py  conf.py  forms.py  views.py
