[tool.poetry]
name = "django-simple-feedback-form"
version = "2.0"
description = "This is a Django application for providing a simple form for users to send emails to the administrators of your django-based site."
homepage = "https://github.com/DOOMer/django-simple-feedback-form"
repository = "https://github.com/DOOMer/django-simple-feedback-form"
authors = ["Artem Galichkin <doomer3d@gmail.com>"]
maintainers = ["Artem Galichkin <doomer3d@gmail.com>"]
packages = [ { include = "feedback_form", from = "src" } ]
readme = "README.rst"
license = "BSD"
keywords = ["django", "feedback", 'contat', 'form',]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
documentation = "https://django-simple-feedback-form.readthedocs.io/"
include = ["LICENSE.rst", "CHANGES.rst"]

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DOOMer/django-simple-feedback-form/issues"